--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-slick": "^0.15.4",
     "react-table": "^6.5.3",
     "react-tap-event-plugin": "^2.0.1",
+    "react-toggle": "^4.0.2",
     "react-toolbox": "^2.0.0-beta.12",
     "recharts": "^1.0.0-alpha.4",
     "redux": "^3.7.2",
