--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "moki.vn",
+  "name": "WebTamSuAnDanh",
   "private": true,
   "version": "0.0.0",
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
     "axios": "^0.17.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^1.0.3",
     "ejs": "2.3.4",
@@ -44,10 +41,12 @@
     "react-dom": "^15.6.1",
     "react-image-magnify": "^2.0.4",
     "react-image-zoom": "^0.6.1",
+    "react-radio-group": "^3.0.2",
     "react-redux": "^5.0.6",
     "react-responsive-sidebar": "^0.1.16",
     "react-router-dom": "^4.2.2",
     "react-scroll-up": "^1.3.3",
+    "react-select": "^1.2.1",
     "react-slick": "^0.15.4",
     "react-table": "^6.5.3",
     "react-tap-event-plugin": "^2.0.1",
@@ -73,8 +72,12 @@
   "author": "linhtd",
   "license": "",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
     "foundation-sites": "^6.4.0",
