--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^15.6.1",
     "react-image-magnify": "^2.0.4",
     "react-image-zoom": "^0.6.1",
+    "react-infinite": "^0.13.0",
     "react-radio-group": "^3.0.2",
     "react-redux": "^5.0.6",
     "react-responsive-sidebar": "^0.1.16",
@@ -50,6 +51,7 @@
     "react-slick": "^0.15.4",
     "react-table": "^6.5.3",
     "react-tap-event-plugin": "^2.0.1",
+    "react-toastify": "^3.4.3",
     "react-toggle": "^4.0.2",
     "react-toolbox": "^2.0.0-beta.12",
     "recharts": "^1.0.0-alpha.4",
