--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^1.0.3",
     "ejs": "2.3.4",
+    "express-mysql-session": "^1.3.0",
     "google-tts-api": "0.0.2",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
