--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.5",
     "moment": "^2.21.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "rc": "1.0.1",
     "rc-rate": "^2.1.1",
     "react": "^15.6.1",
