--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-tooltip": "^3.5.0",
     "recharts": "^1.0.0-alpha.4",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
     "sails-mysql": "^0.11.5",
