--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "react-csv": "^1.0.8",
     "react-d3-components": "^0.6.6",
     "react-dom": "^15.6.1",
+    "react-emoji": "^0.5.0",
+    "react-emojione": "^5.0.0",
     "react-image-magnify": "^2.0.4",
     "react-image-zoom": "^0.6.1",
     "react-infinite": "^0.13.0",
+    "react-mentions": "^2.0.1",
     "react-radio-group": "^3.0.2",
     "react-redux": "^5.0.6",
     "react-responsive-sidebar": "^0.1.16",
