--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.17.0",
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^1.0.3",
     "ejs": "2.3.4",
-    "express-mysql-session": "^1.3.0",
+    "express-mysql-session": "^2.0.1",
     "google-tts-api": "0.0.2",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -35,13 +37,13 @@
     "passport-facebook": "^2.1.1",
     "rc": "1.0.1",
     "rc-rate": "^2.1.1",
-    "react": "^15.6.1",
+    "react": "^16.4.2",
     "react-bootstrap": "^0.31.3",
     "react-burger-menu": "^2.1.5",
     "react-color": "^2.13.8",
     "react-csv": "^1.0.8",
     "react-d3-components": "^0.6.6",
-    "react-dom": "^15.6.1",
+    "react-dom": "^16.4.2",
     "react-emoji": "^0.5.0",
     "react-emojione": "^5.0.0",
     "react-image-magnify": "^2.0.4",
