--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "include-all": "^1.0.0",
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "lodash.isempty": "^4.4.0",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.5",
@@ -47,11 +48,13 @@
     "react-dom": "^16.4.2",
     "react-emoji": "^0.5.0",
     "react-emojione": "^5.0.0",
+    "react-grid-gallery": "^0.5.3",
     "react-image-magnify": "^2.0.4",
     "react-image-zoom": "^0.6.1",
     "react-images": "^0.5.19",
     "react-infinite": "^0.13.0",
     "react-mentions": "^2.0.1",
+    "react-photo-grid": "^1.4.4",
     "react-radio-group": "^3.0.2",
     "react-redux": "^5.0.6",
     "react-responsive-sidebar": "^0.1.16",
