--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-infinite": "^0.13.0",
     "react-mentions": "^2.0.1",
     "react-photo-grid": "^1.4.4",
+    "react-player": "^1.6.6",
     "react-radio-group": "^3.0.2",
     "react-redux": "^5.0.6",
     "react-responsive-sidebar": "^0.1.16",
@@ -76,6 +77,7 @@
     "sails-mysql": "^0.11.5",
     "slick-carousel": "^1.7.1",
     "utils-merge": "^1.0.0",
+    "video-react": "^0.13.0",
     "zeromq": "^4.5.0"
   },
   "scripts": {
@@ -100,6 +102,7 @@
     "css-loader": "^0.28.4",
     "foundation-sites": "^6.4.0",
     "grunt-nodemon": "^0.4.2",
+    "html-loader": "^0.5.5",
     "isomorphic-style-loader": "^4.0.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
