--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.17.0",
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^1.0.3",
+    "classnames": "^2.2.6",
     "ejs": "2.3.4",
     "express-mysql-session": "^2.0.1",
     "google-tts-api": "0.0.2",
@@ -49,6 +50,8 @@
     "react-emoji": "^0.5.0",
     "react-emojione": "^5.0.0",
     "react-grid-gallery": "^0.5.3",
+    "react-html5video": "^2.5.1",
+    "react-image": "^1.5.1",
     "react-image-magnify": "^2.0.4",
     "react-image-zoom": "^0.6.1",
     "react-images": "^0.5.19",
