--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js webpack -w"
   },
   "main": "app.js",
   "repository": {
