sưa giao diện userpage

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^1.0.3",
     "classnames": "^2.2.6",
     "ejs": "2.3.4",
+    "elasticsearch": "^15.1.1",
     "express-mysql-session": "^2.0.1",
     "google-tts-api": "0.0.2",
     "grunt": "1.0.1",
@@ -40,6 +41,7 @@
     "rc": "1.0.1",
     "rc-rate": "^2.1.1",
     "react": "^16.4.2",
+    "react-autosuggest": "^9.4.2",
     "react-bootstrap": "^0.31.3",
     "react-burger-menu": "^2.1.5",
     "react-color": "^2.13.8",
