--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^1.0.3",
     "classnames": "^2.2.6",
+    "create-react-class": "^15.6.3",
     "ejs": "2.3.4",
     "elasticsearch": "^15.1.1",
     "express-mysql-session": "^2.0.1",
@@ -51,6 +52,7 @@
     "react-dom": "^16.4.2",
     "react-emoji": "^0.5.0",
     "react-emojione": "^5.0.0",
+    "react-gravatar": "^2.6.3",
     "react-grid-gallery": "^0.5.3",
     "react-html5video": "^2.5.1",
     "react-image": "^1.5.1",
