--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-toggle": "^4.0.2",
     "react-toolbox": "^2.0.0-beta.12",
     "react-tooltip": "^3.5.0",
+    "reactjs-popup": "^1.3.0",
     "recharts": "^1.0.0-alpha.4",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
