--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^3.1.1",
     "@material-ui/icons": "^3.0.1",
+    "app-root-path": "^2.1.0",
     "axios": "^0.17.0",
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^1.0.3",
@@ -15,6 +16,7 @@
     "ejs": "2.3.4",
     "elasticsearch": "^15.1.1",
     "express-mysql-session": "^2.0.1",
+    "fs": "0.0.1-security",
     "google-tts-api": "0.0.2",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
