--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^1.0.3",
     "classnames": "^2.2.6",
+    "connect-redis": "^3.4.0",
     "create-react-class": "^15.6.3",
     "ejs": "2.3.4",
     "elasticsearch": "^15.1.1",
     "express-mysql-session": "^2.0.1",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "google-tts-api": "0.0.2",
     "grunt": "1.0.1",
