--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-autosuggest": "^9.4.2",
     "react-bootstrap": "^0.31.3",
     "react-burger-menu": "^2.1.5",
+    "react-click-outside": "^3.0.1",
     "react-color": "^2.13.8",
     "react-contenteditable": "^3.1.0",
     "react-csv": "^1.0.8",
