--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "create-react-class": "^15.6.3",
     "ejs": "2.3.4",
     "elasticsearch": "^15.1.1",
+    "emoji-mart": "^2.8.1",
     "express-mysql-session": "^2.0.1",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
