--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-image-zoom": "^0.6.1",
     "react-images": "^0.5.19",
     "react-infinite": "^0.13.0",
+    "react-loading-skeleton": "^0.6.1",
     "react-mentions": "^2.0.1",
     "react-photo-grid": "^1.4.4",
     "react-player": "^1.6.6",
